Eighth lesson exercises are added